sumo/tests/duarouter/errors/testsuite.duarouter
# Tests what happens if the net is not given
no_net

# Tests what happens if the net is not available
false_net

# Tests what happens if the output is not given
no_output

# Tests what happens if the output can not be written
false_output

# Tests what happens if the input is not given
no_input

# Tests what happens if an unknown option is passed
unknown_option


# Tests what happens if the given alternatives do not exist
false_input_alts

# Tests what happens if the given flows do not exist
false_input_flows

# Tests what happens if the given sumo-routes do not exist
false_input_sumo

# Tests what happens if the given trip-definitions do not exist
false_input_trips



# Tests for broken network description handling
network



